fixing navbar on mobile

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -392,7 +392,7 @@ animation-duration:2s;
 		z-index:5;
 
 		background-color:white;
-		min-width:1000px;
+		min-width:400px;
 		height:50px;
 		width:100%;
 	}
@@ -404,7 +404,7 @@ animation-duration:2s;
 		width:60%;
 		height:50px;
 		border-bottom:1px solid black;
-		min-width:500px;
+		min-width:300px;
 
 	}
 
